# PhatChat

./: .gitignore  Makefile  README.md
CMake/: CMakeLists.txt
Dependencies/Libraries/: libsfml-network.so.2.2.0  libsfml-system.so.2.2.0
Documentation/: .~lock.Proposal.docx#  Directories  Proposal.docx
Documentation/Templates/: CS40A_Project1_Proposal.docx
Documents/: Proposal.docx  Requirements and Use Cases.docx  Requirements.docx  Use Cases.docx
Documents/Presentations/: Final.pptx  Week 2.pptx  Week 3.pptx
Source/Chat/Client/: Application.cpp  Application.hpp  Main.cpp
Source/Chat/Core/: Application.hpp
Source/Chat/Server/: Application.cpp  Application.hpp  Main.cpp
Source/PhatChat/Client/: Application.cpp  Application.hpp  ChatWindow.cpp  ChatWindow.hpp  ConnectionWindow.cpp  ConnectionWindow.hpp  Main.cpp  Message.cpp  Message.hpp
Source/PhatChat/Core/: Application.cpp  Application.hpp  DefaultPort.hpp  HandshakePacket.hpp  MessagePacket.cpp  MessagePacket.hpp  OperationCode.hpp  Packet.cpp  Packet.hpp  PingPacket.cpp  PingPacket.hpp  PongPacket.cpp  PongPacket.hpp  RequestUsernamePacket.cpp  RequestUsernamePacket.hpp  ResponseUsernamePacket.cpp  ResponseUsernamePacket.hpp  operationCodes.hpp
Source/PhatChat/Server/: Application.cpp  Application.hpp  Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  Main.cpp
Source/Server/: Main.cpp
